# AiChat

./: .editorconfig  .gitignore  .prettierignore  ANDROID_BUILD_GUIDE.md  CONFIG_LOAD_FIX.md  CONTACT_GROUPS_IMPLEMENTATION.md  DEBUG_CONFIG_ANDROID.md  INTERNAL_TESTING.md  LICENSE  PROGRESS.md  QUICK_START.md  README.md  START_HERE.md  TEST_CHECKLIST.md  TEST_CONFIG_FIX.md  WINDOWS11_ANDROID_SETUP.md  WORLDINFO_NOTES.md  asset-manifest.json  asset-summary.txt  eslint.config.cjs  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  cn-bug-report.yml  cn-feature-request.yml  cn-question.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: cn-pull_request_template.md  en-pull_request_template.md
.github/agents/: commit.agent.md
.github/docs/: PRD-frontend-refactor-svelte.md
.github/instructions/: commit.instructions.md
.github/references/git/: conventional-commit.md
.github/workflows/: check.yml  lint.yml  release.yml  test.yml
docs/: index.html
scripts/: download-deps.sh  fix-paths.js  release.ps1
scripts/tests/: memory-integration.mjs  memory-tests.mjs
scripts/utils/: download-assets.js  extract-assets.js
src/: App.svelte  app.css  iframe-host.html  index.html
src-legacy/: iframe-host.js
src-legacy/assets/css/: main.css  qq-legacy.css
src-legacy/assets/media/: manifest.json
src-legacy/assets/presets/: st-defaults.json
src-legacy/scripts/api/: stream.js
src-legacy/scripts/memory/: memory-edit-parser.js  memory-prompt-utils.js  template-schema.js
src-legacy/scripts/storage/: builtin-worldbooks.js  chat-store.js  config.js  contacts-store.js  memory-table-store.js  moment-summary-store.js  preset-store.js  store-scope.js  worldinfo.js
src-legacy/scripts/ui/: app.js  command-runner.js  config-panel.js  contact-settings-panel.js  debug-panel.js  (+9 more)
src-tauri/: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/resources/media/: manifest.json
src-tauri/src/: commands.rs  lib.rs  main.rs  memory_db.rs  memory_schema.sql  storage.rs
src/lib/: index.js
src/pages/: ChatPage.svelte  ContactsPage.svelte  MomentsPage.svelte  index.js
(+183 files in other folders)
