[package]
name = "tauri-chat-app"
version = "0.2.64"
description = "A cross-platform chat application"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_chat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tauri-chat-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
